📱 add homepage, temporary navigation

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -54,20 +54,22 @@
     }
 
     #root {
-      /* height: calc(100vh - 2rem); */
-      height: 100vh;
+      height: calc(100vh - 8rem - 2rem);
+      margin-top: 8rem;
+      /* height: 100vh; */
     }
 
-    /* @media (max-width: 599px) {
+    @media (max-width: 599px) {
       #root {
-        height: calc(100vh - 4rem);
+        height: calc(100vh - 11rem - 4rem);
+        margin-top: 11rem;
       }
-    } */
+    }
 
   </style>
 </head>
 
-<body class="text-stone-200">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
