--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,8 +27,8 @@
     body {
       /* bg-stone-200 */
       background-color: rgb(231 229 228);
-      /* text-stone-900 */
-      color: rgb(28 25 23);
+      /* text-zinc-900 */
+      color: rgb(24 24 27);
 
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -43,8 +43,8 @@
       body {
         /* bg-stone-900 */
         background-color: rgb(28 25 23);
-        /* text-stone-200 */
-        color: rgb(231 229 228);
+        /* text-zinc-200 */
+        color: rgb(228 228 231);
       }
     }
 
@@ -56,6 +56,7 @@
     #root {
       height: calc(100vh - 8rem - 2rem);
       margin-top: 8rem;
+      width: 100vw;
       /* height: 100vh; */
     }
 
@@ -66,10 +67,19 @@
       }
     }
 
+    @layer base {
+        input[type='number']::-webkit-outer-spin-button,
+        input[type='number']::-webkit-inner-spin-button,
+        input[type='number'] {
+          -webkit-appearance: none;
+          margin: 0;
+          -moz-appearance: textfield !important;
+        }
+     }
   </style>
 </head>
 
-<body>
+<body class="text-zinc-900 dark:text-zinc-200">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
