--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,8 +41,8 @@
 
       /* dark: */
       body {
-        /* bg-stone-900 */
-        background-color: rgb(28 25 23);
+        /* bg-stone-800 */
+        background-color: rgb(41 37 36);
         /* text-zinc-200 */
         color: rgb(228 228 231);
       }
@@ -79,7 +79,7 @@
   </style>
 </head>
 
-<body class="text-zinc-900 dark:text-zinc-200">
+<body class="text-zinc-900 dark:text-zinc-200 bg-stone-800">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
